# Terascale26-ML-Tutorials

./: mkdocs.yml  pyproject.toml  requirements.txt
docs/: getting-started.md  index.md  installation.md
docs/stylesheets/: extra.css
docs/tutorials/: tutorial-1.md  tutorial-2.md  tutorial-3.md  tutorial-4.md  tutorial-5.md
tutorial_1_polynomial_fit/: pyproject.toml  tutorial_poly_fit.ipynb
tutorial_1_polynomial_fit/polynomial_tutorial/: __init__.py  loss.py  main.py  train.py  utils.py
tutorial_2_perceptron-to-DNN/: tutorial_DNN.ipynb
tutorial_4_ddpm/: pyproject.toml  tutorial_notebook.ipynb
tutorial_4_ddpm/ddpm_tutorial/: __init__.py  diffusion.py  main.py  visualization.py
tutorial_5_flow_matching/: pyproject.toml  tutorial_notebook_Flow.ipynb
tutorial_5_flow_matching/flow_matching_tutorial/: __init__.py  flow-NAFjupytertests.py  flow.py  flow_solutions.py  main.py  models.py  utils.py  visualization.py
