[project]
name = "polynomial-regression-tutorial"
version = "0.1.0"
description = "Introduction to the PyTorch pythonic style"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.4",
    "matplotlib>=3.10.8",
    "notebook>=7.5.3",
    "numpy>=2.4.2",
    "torch>=2.9.1",
    "tqdm>=4.67.3",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["polynomial_tutorial"]

[project.scripts]
polynomial_tutorial = "polynomial_tutorial.main:main"
